# Join_Group

./: .gitignore  Readme.md  pyproject.toml
frontend/: .eslintcache  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: group.tsx  user.tsx
frontend/src/components/: Nav.tsx
frontend/src/pages/: Group.tsx  Home.tsx  Login.tsx  Register.tsx
src/: manage.py
src/app/: settings.py  urls.py
src/group/: models.py  serializers.py  services.py  urls.py  views.py
src/group/migrations/: 0001_initial.py  0002_group_joiner.py  0003_tag_remove_group_group_type_group_group_tag.py  0004_group_group_description.py
src/users/: authenticate.py  models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
temp/: .eslintcache  package-lock.json  package.json  tsconfig.json
temp/src/: App.tsx
temp/src/components/: Nav.tsx
temp/src/pages/: Home.tsx  Login.tsx  Register.tsx
